# dms

./: .gitignore  Cargo.toml  NOTES.md  README.md  analyze.py  ismagic.py  small-dict.txt  smalldict.py  usa_5.txt
.cargo/: config.toml
artifacts/: squares-14m08.json  squares-final.json  squares-final.txt  squares-magic.txt
src/: appstate.rs  dict.rs  main.rs  search.rs  squares.rs  words.rs
