[package]
name = "ws5"
version = "0.5.0"
edition = "2024"
authors = ["Bart Massey <bart.massey@gmail.com>"]
license-file = "LICENSE.txt"
description = "Find 5×5 word squares."

[dependencies]
anyhow = "1.0"
caches = "0.3"
serde = "1.0"
serde_json = "1.0"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
lto = "fat"
