[package]
name = "ws5"
version = "0.5.0"
edition = "2024"
authors = ["Bart Massey <bart.massey@gmail.com>"]
license-file = "LICENSE.txt"
description = "Find 5×5 word squares."

[dependencies]
anyhow = "1.0"
caches = "0.3"
serde = "1.0"
serde_json = "1.0"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[profile.release]
# Build time goes from 2s to 6s on my machine.
# But you can profile with `cargo flamegraph`.
# debug = true
# Runtime stays about the same on my machine.
# Build time increases slightly.
opt-level = 3
# Runtime goes from 1m40 to 1m23 on my machine.
# Build time decreases slightly (!).
codegen-units = 1
# Runtime goes from 1m29 to 1m23 on my machine.
# Build time goes from 2s to 9s.
lto = "fat"
